WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111272
Attempt to fix the Qt build after
r144498
https://bugs.webkit.org/show_bug.cgi?id=111272
Summary
Attempt to fix the Qt build after r144498
Adam Barth
Reported
2013-03-03 10:18:09 PST
Attempt to fix the Qt build after
r144498
Attachments
Patch
(1.81 KB, patch)
2013-03-03 10:20 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-03-03 10:20:36 PST
Created
attachment 191137
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-03-03 10:27:27 PST
Comment on
attachment 191137
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191137&action=review
> Source/WebCore/xml/parser/XMLDocumentParserQt.cpp:276 > + append(String("<qxmlstreamdummyelement>").impl());
This could be StringImpl::create(), but this is also fine.
Adam Barth
Comment 3
2013-03-03 10:30:42 PST
I'm going to leave it that way for simplicity.
WebKit Review Bot
Comment 4
2013-03-03 11:59:39 PST
Comment on
attachment 191137
[details]
Patch Clearing flags on attachment: 191137 Committed
r144578
: <
http://trac.webkit.org/changeset/144578
>
WebKit Review Bot
Comment 5
2013-03-03 11:59:42 PST
All reviewed patches have been landed. Closing bug.
Julien Brianceau
Comment 6
2013-03-03 12:20:26 PST
(In reply to
comment #0
)
> Attempt to fix the Qt build after
r144498
Build is ok now:
http://build.webkit.org/builders/Qt%20Linux%20SH4%20Release/builds/21413
Thanks a lot for your reactivity (even on a sunday) !
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug