Attempt to fix the Qt build after r144498 https://bugs.webkit.org/show_bug.cgi?id=111272

Reviewed by Eric Seidel.

Update the Qt version of the XML parser to call the new API.

* xml/parser/XMLDocumentParserQt.cpp:
(WebCore::XMLDocumentParser::resumeParsing):
(WebCore::XMLDocumentParser::appendFragmentSource):


Canonical link: https://commits.webkit.org/129627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144578 268f45cc-cd09-0410-ab3c-d52691b4dbfc